// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Command Profile Loader should allow us to load a required profile 1`] = `
Object {
  "name": "tasty",
  "type": "banana",
}
`;

exports[`Command Profile Loader should allow us to load a required profile by name 1`] = `
Object {
  "name": "tasty",
  "type": "banana",
}
`;

exports[`Command Profile Loader should allow us to load a required profile by name with a dependency 1`] = `
Object {
  "name": "tasty",
  "type": "banana",
}
`;

exports[`Command Profile Loader should allow us to load a required profile by name with a dependency 2`] = `
Object {
  "name": "red",
  "type": "strawberry",
}
`;

exports[`Command Profile Loader should allow us to load two different required types 1`] = `
Object {
  "name": "tasty",
  "type": "banana",
}
`;

exports[`Command Profile Loader should allow us to load two different required types 2`] = `
Object {
  "name": "red",
  "type": "strawberry",
}
`;

exports[`Command Profile Loader should detect a bad logger instance 1`] = `"Expect Error: Could not construct the profile loader. The \\"logger\\" supplied is not of type Logger."`;

exports[`Command Profile Loader should detect missing command definitions when creating the loader 1`] = `"Expect Error: Could not construct the profile loader. No command definition supplied."`;

exports[`Command Profile Loader should detect missing profile manager when creating the loader 1`] = `"Expect Error: Could not construct the profile loader. No profile factory supplied."`;

exports[`Command Profile Loader should handle load of required and optional profiles 1`] = `
Object {
  "name": "tasty",
  "type": "banana",
}
`;

exports[`Command Profile Loader should handle load of required and optional profiles 2`] = `
Object {
  "name": "red",
  "type": "strawberry",
}
`;

exports[`Command Profile Loader should handle multiple loads of the same type 1`] = `
Object {
  "name": "tasty",
  "type": "banana",
}
`;

exports[`Command Profile Loader should handle multiple loads of the same type 2`] = `
Object {
  "name": "great",
  "type": "banana",
}
`;

exports[`Command Profile Loader should handle multiple loads of the same type 3`] = `
Object {
  "name": "awesome",
  "type": "banana",
}
`;

exports[`Command Profile Loader should handle multiple loads of the same type 4`] = `
Object {
  "name": "tasty",
  "type": "banana",
}
`;

exports[`Command Profile Loader should handle multiple loads of the same type 5`] = `
Array [
  Object {
    "name": "tasty",
    "type": "banana",
  },
  Object {
    "name": "great",
    "type": "banana",
  },
  Object {
    "name": "awesome",
    "type": "banana",
  },
]
`;

exports[`Command Profile Loader should percolate the error if a required profile for one type is not found 1`] = `"Not found"`;

exports[`Command Profile Loader should percolate the load error to the caller 1`] = `"An error occurred during the load."`;

exports[`Command Profile Loader should react properly if the profile manager does not return an expected result 1`] = `"Unexpected internal load error: The profile \\"tasty\\" was not loaded by the profile manager."`;

exports[`Command Profile Loader should react properly if the profile manager does not return an expected result for default 1`] = `"Unexpected internal load error: The profile \\"default requested\\" was not loaded by the profile manager."`;
